syntax = "proto3";

package calculator;
option go_package="./calculatorpb";

message Numbers {
    int32 first = 1;
    int32 second = 2;
}

message CalculateRequest {
    Numbers numbers = 1;
}

message CalculateResponse {
        int32  sum = 1;
}

message PrimeNumber {
    int32 prime_number = 1;
}

message PrimeNumberRequest {
    PrimeNumber prime_number = 1;
}

message PrimeNumberResponse {
    int32 prime_number = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    float average = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
    int32 current_max = 1;
}

service CalculatorService {
    rpc Calculate (CalculateRequest) returns (CalculateResponse) {};

    rpc PrimeNumberDecomposition(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};

    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
}